--- a/EggTimer/Base.lproj/Main.storyboard
+++ b/EggTimer/Base.lproj/Main.storyboard
@@ -120,6 +120,21 @@
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nJN-th-c5K" userLabel="Timer View">
                                         <rect key="frame" x="0.0" y="571.5" width="374" height="246.5"/>
+                                        <subviews>
+                                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" translatesAutoresizingMaskIntoConstraints="NO" id="hUO-GU-6n2">
+                                                <rect key="frame" x="20" y="120.5" width="334" height="6"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="5" id="BCs-lc-GL6"/>
+                                                </constraints>
+                                                <color key="progressTintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="trackTintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </progressView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="hUO-GU-6n2" secondAttribute="trailing" constant="20" symbolic="YES" id="faX-mY-ggU"/>
+                                            <constraint firstItem="hUO-GU-6n2" firstAttribute="leading" secondItem="nJN-th-c5K" secondAttribute="leading" constant="20" symbolic="YES" id="nVN-JH-nmg"/>
+                                            <constraint firstItem="hUO-GU-6n2" firstAttribute="centerY" secondItem="nJN-th-c5K" secondAttribute="centerY" id="tMd-k0-iLq"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
                             </stackView>
@@ -133,6 +148,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="progressBar" destination="hUO-GU-6n2" id="WkV-PR-5yu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
